--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "author": "Leandro L Assarice",
   "license": "ISC",
   "dependencies": {
-    "print-js": "^1.5.0"
   }
 }
